--- a/fixme.dtx
+++ b/fixme.dtx
@@ -499,7 +499,7 @@
 % (not the commands!). There are some restrictions on its usage however, as
 % discussed in the next section.
 %
-% \subsubsection{Built-in \vs external layouts}
+% \subsubsection{Built-in \vs external environment layouts}
 % Environments layouts are provided either in the core of \fx, or in separate
 % files loaded dynamically on demand. Simple layouts are typically built-in,
 % whereas those requiring additional packages are external, so that they don't
@@ -560,7 +560,7 @@
 % (not the commands!). There are some restrictions on its usage however, as
 % discussed in the next section.
 %
-% \subsubsection{Built-in \vs external layouts}
+% \subsubsection{Built-in \vs external target layouts}
 % Target layouts are provided either in the core of \fx, or in separate files
 % loaded dynamically on demand. Simple layouts are typically built-in, whereas
 % those requiring additional packages are external, so that they don't consume
