Use the external dox package

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -33,7 +33,7 @@
 %<*driver>
 \documentclass[a4paper]{ltxdoc}
 \usepackage{xspace}
-\usepackage{docx}
+\usepackage{dox}
 % #### NOTE: I don't want to \usepackage{fixme} just for getting the file
 % information. So here what I do: generate a header with only the
 % \ProvidesPackage command, and also the \fixmelogo. Then, I \input it so that
