Fix misdescription of \fixme

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -196,7 +196,7 @@
 % levels of importance (notes, warnings, errors and fatal errors).
 % \cs{fxfatal} is a bit different from the other ones, as will be explained in
 % section \sectionref{sec:manual:behavior}.\par
-% \DescribeMacro{\fx}
+% \DescribeMacro{\fixme}
 % As of version 4, the \cs{fixme} command is a synonym for \cs{fxfatal} and is
 % considered deprecated.\par
 %
