--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1032,15 +1032,14 @@
 %   |<h.harders@tu-bs.de>|.
 % \end{itemize}
 %
-% \StopEventually{\par Well, I think that's it. Enjoy using \fx!
-%   \vfill\hfill\small \packagecopyright{}.}
+% \StopEventually{\vfill\hfill\small \packagecopyright{}.}
 %
 % \section{Implementation}
 % \subsection{Preamble}
 %    \begin{macrocode}
 %<fixme>\NeedsTeXFormat{LaTeX2e}
 %<*header>
-\ProvidesPackage{fixme}[2009/09/10 v4.0 Insert fixme notes in your documents]
+\ProvidesPackage{fixme}[2009/09/11 v4.0 Insert fixme notes in your documents]
 
 %</header>
 %    \end{macrocode}
