Add \DoNotIndex stuff that doesn't work

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1962,6 +1962,8 @@
 
 %    \end{macrocode}
 % \end{macro}
+%   ^^A #### FIXME: this doesn't work
+%   \DoNotIndex{\fx*count,\fx*name,\fx*sname}
 % \begin{counter}{fx*count}
 %   \begin{macro}{\fx*name}
 %     \begin{macro}{\fx*sname}
@@ -2334,6 +2336,8 @@
 
 %    \end{macrocode}
 % \end{macro}
+% ^^A #### FIXME: this doesn't work
+% \DoNotIndex{\fx*[*],anfx*[*]}
 % \begin{macro}{\fx*[*]}
 %   \begin{environment}{anfx*[*]}
 %     \makeatletter
