--- a/fixme.dtx
+++ b/fixme.dtx
@@ -38,6 +38,7 @@
 \doxitem{Option}{option}{options}
 \doxitem{Counter}{counter}{counters}
 \doxitem{Color}{color}{colors}
+\doxitem{Layout}{layout}{layouts}
 \doxitem{Theme}{theme}{themes}
 
 % #### NOTE: I don't want to \usepackage{fixme} just for getting the file
@@ -539,6 +540,9 @@
 % The table below lists the environment layouts currently distributed with
 % \fx.
 %
+% \DescribeLayout{bold}
+% \DescribeLayout{italics}
+% \DescribeLayout{color}
 % \begin{center}
 %   \DeleteShortVerb{\|}
 %   \begin{tabular}{|l|c|p{5cm}|}
@@ -611,6 +615,9 @@
 % The table below lists the target layouts currently distributed with
 % \fx.
 %
+% \DescribeLayout{bold}
+% \DescribeLayout{italics}
+% \DescribeLayout{color}
 % \begin{center}
 %   \DeleteShortVerb{\|}
 %   \begin{tabular}{|l|c|p{5cm}|}
@@ -1687,6 +1694,7 @@
 % \begin{macro}{\FXEnvLayoutBoldBegin}
 %   \begin{macro}{\FXEnvLayoutBoldEnd}
 %     \marg{type}\marg{author}
+%     \begin{layout}{bold}
 %    \begin{macrocode}
 \newcommand*\FXEnvLayoutBoldBegin[2]{%
   \bfseries\ignorespaces#2 \@nameuse{fx#1name}: \ignorespaces}
@@ -1695,6 +1703,7 @@
   \FXEnvLayoutBoldBegin}{\FXEnvLayoutBoldEnd}
 
 %    \end{macrocode}
+%     \end{layout}
 %   \end{macro}
 % \end{macro}
 %
@@ -1702,6 +1711,7 @@
 % \begin{macro}{\FXEnvLayoutItalicsBegin}
 %   \begin{macro}{\FXEnvLayoutItalicsEnd}
 %     \marg{type}\marg{author}
+%     \begin{layout}{italics}
 %    \begin{macrocode}
 \newcommand*\FXEnvLayoutItalicsBegin[2]{%
   \itshape\ignorespaces#2 \@nameuse{fx#1name}: \ignorespaces}
@@ -1710,6 +1720,7 @@
   \FXEnvLayoutItalicsBegin}{\FXEnvLayoutItalicsEnd}
 
 %    \end{macrocode}
+%     \end{layout}
 %   \end{macro}
 % \end{macro}
 %
@@ -1793,21 +1804,25 @@
 % \subsubsubsection{Bold}
 % \begin{macro}{\FXTargetLayoutBold}
 %   \marg{target}
+%   \begin{layout}{bold}
 %    \begin{macrocode}
 \newcommand\FXTargetLayoutBold[1]{\begingroup\bfseries#1\endgroup}
 \FXRegisterTargetLayout{bold}{\FXTargetLayoutBold}
 
 %    \end{macrocode}
+%   \end{layout}
 % \end{macro}
 %
 % \subsubsubsection{Italics}
 % \begin{macro}{\FXTargetLayoutItalics}
 %   \marg{target}
+%   \begin{layout}{italics}
 %    \begin{macrocode}
 \newcommand\FXTargetLayoutItalics[1]{\begingroup\itshape#1\endgroup}
 \FXRegisterTargetLayout{italics}{\FXTargetLayoutItalics}
 
 %    \end{macrocode}
+%   \end{layout}
 % \end{macro}
 %
 % \subsubsection{Target layout selection}
@@ -2746,6 +2761,7 @@
 % \section{External Layouts}
 % \subsection{Environment layouts}
 % \subsubsection{The \texttt{color} environment layout}
+% \begin{layout}{color}
 %    \begin{macrocode}
 %<*fxenvlayoutcolor>
 \NeedsTeXFormat{LaTeX2e}
@@ -2754,21 +2770,21 @@
 \RequirePackage{color}
 
 %    \end{macrocode}
-% \begin{macro}{\@fxdocolon}
-%   \marg{author}\\
-%   Add a colon after the author tag, unless empty.
+%   \begin{macro}{\@fxdocolon}
+%     \marg{author}\\
+%     Add a colon after the author tag, unless empty.
 %    \begin{macrocode}
 \providecommand*\@fxdocolon[1]{%
   \ifthenelse{\equal{#1}{}}{\def\@fxcolon{}}{\def\@fxcolon{: }}}
 
 %    \end{macrocode}
-% \end{macro}
-% \begin{color}{fxnote}
-%   \begin{color}{fxwarning}
-%     \begin{color}{fxerror}
-%       \begin{color}{fxfatal}
-%         Environments use the same colors as the notes themselves because
-%         their contents really is a longer note.
+%   \end{macro}
+%   \begin{color}{fxnote}
+%     \begin{color}{fxwarning}
+%       \begin{color}{fxerror}
+%         \begin{color}{fxfatal}
+%           Environments use the same colors as the notes themselves because
+%           their contents really is a longer note.
 %    \begin{macrocode}
 \definecolor{fxnote}{rgb}{0.0000,0.6000,0.0000}
 \definecolor{fxwarning}{rgb}{1.0000,0.5490,0.0000}
@@ -2776,13 +2792,13 @@
 \definecolor{fxfatal}{rgb}{1.0000,0.0000,0.0000}
 
 %    \end{macrocode}
+%         \end{color}
 %       \end{color}
 %     \end{color}
 %   \end{color}
-% \end{color}
-% \begin{macro}{\FXEnvLayoutColorBegin}
-%   \begin{macro}{\FXEnvLayoutColorEnd}
-%     \marg{type}\marg{author}
+%   \begin{macro}{\FXEnvLayoutColorBegin}
+%     \begin{macro}{\FXEnvLayoutColorEnd}
+%       \marg{type}\marg{author}
 %    \begin{macrocode}
 \newcommand*\FXEnvLayoutColorBegin[2]{%
   \@fxdocolon{#2}%
@@ -2792,11 +2808,13 @@
 
 %</fxenvlayoutcolor>
 %    \end{macrocode}
+%     \end{macro}
 %   \end{macro}
-% \end{macro}
+% \end{layout}
 %
 % \subsection{Target Layouts}
 % \subsubsection{The \texttt{color} target layout}
+% \begin{layout}{color}
 %    \begin{macrocode}
 %<*fxtargetlayoutcolor>
 \NeedsTeXFormat{LaTeX2e}
@@ -2805,21 +2823,22 @@
 \RequirePackage{color}
 
 %    \end{macrocode}
-% \begin{color}{fxtarget}
+%   \begin{color}{fxtarget}
 %    \begin{macrocode}
 \definecolor{fxtarget}{rgb}{0.3725,0.6196,0.6275}
 
 %    \end{macrocode}
-% \end{color}
-% \begin{macro}{\FXTargetLayoutColor}
-%   \marg{target}
+%   \end{color}
+%   \begin{macro}{\FXTargetLayoutColor}
+%     \marg{target}
 %    \begin{macrocode}
 \newcommand\FXTargetLayoutColor[1]{\begingroup\color{fxtarget}#1\endgroup}
 \FXRegisterTargetLayout{color}{\FXTargetLayoutColor}
 
 %</fxtargetlayoutcolor>
 %    \end{macrocode}
-% \end{macro}
+%   \end{macro}
+% \end{layout}
 %
 % \section{Themes}
 % \subsection{The \texttt{signature} theme}
